--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 section {
   min-height: 100vh;
   padding: 0 9%;
+  margin-top: 30px;
   padding-top: 7.5rem;
   padding-bottom: 2rem;
 }
@@ -174,10 +175,10 @@ header label {
 
 .layanan .box-container {
   display: flex;
-  align-items: stretch; /* Make boxes stretch to have equal height */
+  align-items: stretch;
   justify-content: center;
   flex-wrap: wrap;
-  margin: -1.5rem; /* Add negative margin to counteract spacing between boxes */
+  margin: -1.5rem;
 }
 
 .layanan .box-container .box {
@@ -234,7 +235,7 @@ header label {
 }
 
 .service {
-  width: 35rem;
+  width: 100px;
   text-align: center;
   margin: 0 5rem;
 }
@@ -313,176 +314,6 @@ header label {
 
 .about .column .content .buttons a:last-child {
   margin-left: 2rem;
-}
-
-.newsletter {
-  text-align: center;
-  padding: 5rem 1rem;
-  background: url(./images/subscribe-bg.png) no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-.newsletter h3 {
-  color: #fff;
-  font-size: 3rem;
-  text-transform: uppercase;
-}
-
-.newsletter p {
-  color: #fff;
-  font-size: 1.6rem;
-  margin: 2rem auto;
-  width: 70rem;
-}
-
-.newsletter form {
-  display: flex;
-  max-width: 70rem;
-  border: 0.2rem solid #fff;
-  padding: 0.5rem;
-  border-radius: 5rem;
-  margin: 2rem auto;
-  height: 5.5rem;
-}
-
-.newsletter form input[type="email"] {
-  padding: 0 2rem;
-  font-size: 1.7rem;
-  background: none;
-  width: 100%;
-  color: #fff;
-  text-transform: none;
-  background: none;
-}
-
-.newsletter form input[type="email"]::placeholder {
-  color: #eee;
-  text-transform: capitalize;
-}
-
-.newsletter form input[type="submit"] {
-  background: #fff;
-  width: 20rem;
-  font-size: 1.7rem;
-  border-radius: 5rem;
-  cursor: pointer;
-}
-
-.newsletter form input[type="submit"]:hover {
-  color: var(--pink);
-}
-
-.review .box-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.review .box-container .box {
-  background: #fff;
-  margin: 1rem;
-  padding: 1rem;
-  text-align: center;
-  position: relative;
-  border: 0.1rem solid rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-  flex: 1 1 30rem;
-  border-radius: 0.5rem;
-}
-
-.review .box-container .box .fa-quote-right {
-  position: absolute;
-  top: 1rem;
-  right: 2rem;
-  font-size: 8rem;
-  color: var(--pink);
-  opacity: 0.3;
-}
-
-.review .box-container .box .user img {
-  border-radius: 50%;
-  object-fit: cover;
-  height: 7rem;
-  width: 7rem;
-  margin-top: 2rem;
-}
-
-.review .box-container .box .user h3 {
-  color: var(--pink);
-  font-size: 2rem;
-}
-
-.review .box-container .box .user .stars i {
-  color: var(--purple);
-  font-size: 1.5rem;
-  padding: 1rem 0;
-}
-
-.review .box-container .box .comment {
-  color: #666;
-  font-size: 1.4rem;
-  padding: 1rem;
-}
-
-.pricing .box-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.pricing .box-container .box {
-  flex: 1 1 27rem;
-  margin: 1rem;
-  padding: 1rem;
-  background: #fff;
-  border: 0.1rem solid rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
-  border-radius: 0.5rem;
-  text-align: center;
-  padding-bottom: 3rem;
-}
-
-.pricing .box-container .box:nth-child(2),
-.pricing .box-container .box:hover {
-  border: 0.2rem solid var(--pink);
-}
-
-.pricing .box-container .box .title {
-  color: var(--purple);
-  font-size: 2.5rem;
-  padding-top: 1rem;
-}
-
-.pricing .box-container .box .price {
-  font-size: 4rem;
-  color: var(--pink);
-  padding: 1rem 0;
-}
-
-.pricing .box-container .box .price span {
-  font-size: 2rem;
-}
-
-.pricing .box-container .box ul {
-  padding: 1rem 0;
-  list-style: none;
-}
-
-.pricing .box-container .box ul li {
-  font-size: 1.7rem;
-  color: #666;
-  padding: 0.5rem 0;
-}
-
-.pricing .box-container .box ul li .fa-check {
-  color: lightgreen;
-}
-
-.pricing .box-container .box ul li .fa-times {
-  color: tomato;
 }
 
 .contact {
@@ -675,7 +506,7 @@ label {
 @media (max-width: 991px) {
   section {
     padding: 0 3%;
-    padding-top: 7.5rem;
+    padding-top: 8rem;
     padding-bottom: 2rem;
   }
 }
@@ -735,10 +566,6 @@ label {
   .about {
     background-position: right;
   }
-
-  .newsletter p {
-    width: auto;
-  }
 }
 
 @media (max-width: 450px) {
@@ -787,50 +614,5 @@ label {
   .service-btn {
     width: 15rem;
     padding: 1rem;
-  }
-
-  .layanan {
-    width: 100%;
-  }
-
-  .layanan {
-    width: 50%;
-    padding: 0 4rem;
-  }
-
-  .signup-page-top {
-    width: 50rem;
-  }
-
-  .signup-page-content {
-    width: 85%;
-    padding: 0 3rem;
-  }
-
-  .signup-page-content-left {
-    width: 100%;
-    padding: 3rem;
-  }
-
-  .content-left-images img {
-    width: 14rem;
-    margin: 0 1.5rem;
-    border: 1rem solid #ccc;
-  }
-
-  .signup-page-content-left h1 {
-    font-size: 3rem;
-  }
-
-  .signup-page-content-right {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 3rem;
-  }
-
-  .input-group input[type="radio"] {
-    width: 20%;
-    margin: 0.5rem 1.5rem 0 0;
   }
 }
