--- a/style.css
+++ b/style.css
@@ -282,6 +282,7 @@ header label {
 }
 .input-box label {
   color: #333;
+  font-size: 1.5rem;
 }
 .form :where(.input-box input, .select-box) {
   position: relative;
